<resources>
    <string name="app_name">otpGenerator</string>
    <string name="todo">TODO</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_otp_on_given_mobile_number">We will send you an one time password (OTP) on given mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="country_code">+91</string>
    <string name="contact_number">1234567890</string>
    <string name="get_otp">Get OTP</string>
    <string name="please_enter_the_otp_sent_to_you">Please enter the OTP sent to you</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the otp</string>
    <string name="resend_otp">RESEND OTP AGAIN</string>
    <string name="submit">Submit</string>
    <string name="congratulations_you_have_completed_your_otp_verification_successfully">Congratulations you have completed your OTP verification successfully....</string>
</resources>