<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".HomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize,UseCompoundDrawables">

        <ImageView
            android:id="@+id/send"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:layout_marginTop="90sp"
            android:contentDescription="@string/todo"
            android:src="@drawable/send" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="50sp"
            android:gravity="center"
            android:text="@string/we_will_send_you_an_one_time_password_otp_on_given_mobile_number"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="15sp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60sp"
            android:layout_marginEnd="60sp"
            android:background="@drawable/background_box"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:gravity="center"
                android:text="@string/country_code"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="15sp"
                android:layout_height="40sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etContactNumber"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:background="@null"
                android:hint="@string/contact_number"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnGetOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50sp"
                android:backgroundTint="@color/purple_500"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/get_otp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBarForGetOTP"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>