<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".VerificationOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize,UseCompoundDrawables">

        <ImageView
            android:id="@+id/send"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:layout_marginTop="90sp"
            android:contentDescription="@string/todo"
            android:src="@drawable/verification" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="50sp"
            android:gravity="center"
            android:text="@string/please_enter_the_otp_sent_to_you"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="50sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputOTP1"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:background="@drawable/background_box"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputOTP2"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/background_box"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputOTP3"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/background_box"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputOTP4"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/background_box"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputOTP5"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/background_box"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputOTP6"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/background_box"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/resend_otp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50sp"
                android:backgroundTint="@color/purple_500"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBarForVerifyOTP"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>